--- a/index.html
+++ b/index.html
@@ -1,13 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Assignment 1</title>
     <link rel="stylesheet" href="styles/styles.css">
 </head>
+
 <body>
-    
+
+    <!-- header starts here  -->
+    <header>
+        <div class="header-container">
+            <h3 class="header-title">All Thinks Are <br> Possible If You <br> Believe</h3>
+            <p class="header-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br>
+                Architecto corrupti nisi incidunt nesciunt nis cumque <br> labore, pariatur magnam quia accusantium,
+                ipsum <br> exercitationem provident aspernatur corporis.</p>
+            <button class="btn-primary" type="button">Contact Us</button>
+        </div>
+    </header>
+    <main>
+
+        <!-- about my failure section  -->
+        <section class="about-failure">
+            <div class="section-image">
+                <img src="images/person.png" alt="image of a girl">
+            </div>
+
+            <div class="section-info">
+                <h2 class="section-title">My Failures Of <br> Previous Year</h2>
+                <p class="section-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci
+                    incidunt aspernatur at, consequatur dolorum aut, esse rem, harum repudiandae fugit eum perferendis
+                    expedita distinctio quae? Consequatur, quo? Placeat, eligendi a!</p>
+                <ul>
+                    <li class="failure-list">Contrary to popular belief, is not simply.</li>
+                    <li class="failure-list">Contrary to popular belief.</li>
+                    <li class="failure-list">Contrary to popular belief, is not .</li>
+                    <li class="failure-list">Contrary to popular is not simply.</li>
+                    <li class="failure-list">Contrary belief, is not simply.</li>
+                </ul>
+            </div>
+        </section>
+
+        <!-- about my plan -->
+        <section class="my-plan">
+            <h2>My Plan</h2>
+            <div class="plan-container">
+                <div class="plans">
+                    <img class="plan-icon" src="images/icons/web.png" alt="web icon">
+                    <h3 class="plan-title">Web Development</h3>
+                    <p class="plan-description">I want to start</p>
+                </div>
+                <div class="plans">
+                    <img class="plan-icon" src="/images/icons/js.png" alt="javascript icon">
+                    <h3 class="plan-title">JavaScript</h3>
+                    <p class="plan-description">I want to learn</p>
+                </div>
+                <div class="plans">
+                    <img class="plan-icon" src="/images/icons/ecom.png" alt="e-commerce icon">
+                    <h3 class="plan-title">E-commerce</h3>
+                    <p class="plan-description">I want to develop</p>
+                </div>
+                <div class="plans">
+                    <img class="plan-icon" src="/images/icons/smoke.png" alt="smoke icon">
+                    <h3 class="plan-title">Smoking</h3>
+                    <p class="plan-description">I want to end</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- about an advice  -->
+        <section class="advice">
+            <div class="advice-section">
+                <h2 class="section-title">Always Keep A Positive <br> Mindset</h2>
+                <button class="btn-secondary" type="button">Call Now</button>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div class="footer">
+            <div class="contact-info">
+                <h3 class="footer-title">Future</h3>
+                <p class="footer-description">Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. Asperiores voluptatum suscipit voluptatibus, <br> alias quo, dicta facilis accusamus ut incidunt, <br> commodi modi possimus molestiae at magnam!</p>
+
+                <div class="contact-details">
+                <p>Email  :<a href="eeryesha@gmail.com">eeryesha@gmail.com</a></p>
+                <br>
+                <p>Contact no  : <input class="info" type="number" placeholder="0123-456789" readonly> </p> 
+            </div>
+
+                <div class="footer-icon">
+                <a href="">
+                    <img src="images/icons/fb.png" alt="facebook icon">
+                </a>
+                <a href="">
+                    <img src="images/icons/twitter.png" alt="twitter icon">
+                </a>
+                <a href="">
+                    <img src="images/icons/youtube.png" alt="youtube icon">
+                </a>
+            </div>
+
+            </div>
+            <div class="subscribing-info">
+                <input type="email" placeholder="Enter your email">
+                <button class="btn-tertiary" type="button" >Subscribe</button>
+
+            </div>
+
+        </div>
+
+    </footer>
+
 </body>
+
 </html>
