file path changed

--- a/index.html
+++ b/index.html
@@ -54,17 +54,17 @@
                     <p class="plan-description">I want to start</p>
                 </div>
                 <div class="plans">
-                    <img class="plan-icon" src="/images/icons/js.png" alt="javascript icon">
+                    <img class="plan-icon" src="images/icons/js.png" alt="javascript icon">
                     <h3 class="plan-title">JavaScript</h3>
                     <p class="plan-description">I want to learn</p>
                 </div>
                 <div class="plans">
-                    <img class="plan-icon" src="/images/icons/ecom.png" alt="e-commerce icon">
+                    <img class="plan-icon" src="images/icons/ecom.png" alt="e-commerce icon">
                     <h3 class="plan-title">E-commerce</h3>
                     <p class="plan-description">I want to develop</p>
                 </div>
                 <div class="plans">
-                    <img class="plan-icon" src="/images/icons/smoke.png" alt="smoke icon">
+                    <img class="plan-icon" src="images/icons/smoke.png" alt="smoke icon">
                     <h3 class="plan-title">Smoking</h3>
                     <p class="plan-description">I want to end</p>
                 </div>
