--- a/index.html
+++ b/index.html
@@ -71,11 +71,30 @@
             </div>
         </section>
 
+        <!-- about my skills -->
+        <section class="skill-section">
+            <h3 class="section-title">Skills I Have Learnt</h3>
+            <div class="skills-container">
+                <div class="skill">
+                    <img class="skill-icon" src="images/icons/icons8-html-48.png" alt="">
+                    <h3 class="skill-title">HTML </h3>
+                    <p class="skill-description" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam est, voluptates blanditiis rerum cumque maxime. </p>
+                </div>
+                <div class="skill">
+                    <img class="skill-icon" src="images/icons/icons8-css-48.png" alt="">
+                    <h3 class="skill-title"> CSS </h3>
+                    <p class="skill-description" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam est, voluptates blanditiis rerum cumque maxime. </p>
+                </div>
+            </div>
+        </section>
+
         <!-- about an advice  -->
         <section class="advice">
             <div class="advice-section">
+                <div class="advice-section-container">
                 <h2 class="section-title">Always Keep A Positive <br> Mindset</h2>
                 <button class="btn-secondary" type="button">Call Now</button>
+                </div>
             </div>
         </section>
     </main>
@@ -83,37 +102,36 @@
         <div class="footer">
             <div class="contact-info">
                 <h3 class="footer-title">Future</h3>
-                <p class="footer-description">Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. Asperiores voluptatum suscipit voluptatibus, <br> alias quo, dicta facilis accusamus ut incidunt, <br> commodi modi possimus molestiae at magnam!</p>
+                <div class="footer-description-container">
+                    <p class="footer-description">Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. Asperiores voluptatum suscipit voluptatibus, <br> alias quo, dicta facilis accusamus ut incidunt, <br> commodi modi possimus molestiae at magnam!</p>
 
-                <div class="contact-details">
-                <p>Email  :<a href="eeryesha@gmail.com">eeryesha@gmail.com</a></p>
-                <br>
-                <p>Contact no  : <input class="info" type="number" placeholder="0123-456789" readonly> </p> 
-            </div>
+                    <p>Email :<a href="mailto:eeryesha@gmail.com"> eeryesha@gmail.com</a></p>
+                    <br>
+                    <p>Contact no :<a href="tel:+880123-456789"> +880123-456789</a></p>
+                </div>
+
 
                 <div class="footer-icon">
-                <a href="">
-                    <img src="images/icons/fb.png" alt="facebook icon">
-                </a>
-                <a href="">
-                    <img src="images/icons/twitter.png" alt="twitter icon">
-                </a>
-                <a href="">
-                    <img src="images/icons/youtube.png" alt="youtube icon">
-                </a>
-            </div>
+                    <a href="">
+                        <img src="images/icons/fb.png" alt="facebook icon">
+                    </a>
+                    <a href="">
+                        <img src="images/icons/twitter.png" alt="twitter icon">
+                    </a>
+                    <a href="">
+                        <img src="images/icons/youtube.png" alt="youtube icon">
+                    </a>
+                </div>
 
             </div>
-            <div class="subscribing-info">
-                <input type="email" placeholder="Enter your email">
-                <button class="btn-tertiary" type="button" >Subscribe</button>
-
-            </div>
-
+                <div class="subscribing-info">
+                    <h3>Subscribe</h3>
+                    <input class="input-email" type="email" placeholder="Enter your email">
+                    <br>
+                    <button class="btn-tertiary" type="button">Subscribe</button>
+                </div>
         </div>
-
     </footer>
-
 </body>
 
 </html>
