--- a/index.html
+++ b/index.html
@@ -10,19 +10,17 @@
 </head>
 
 <body>
-
-    <!-- header starts here  -->
+    <!-- header starts from here  -->
     <header>
         <div class="header-container">
-            <h3 class="header-title">All Thinks Are <br> Possible If You <br> Believe</h3>
-            <p class="header-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br>
-                Architecto corrupti nisi incidunt nesciunt nis cumque <br> labore, pariatur magnam quia accusantium,
-                ipsum <br> exercitationem provident aspernatur corporis.</p>
-            <button class="btn-primary" type="button">Contact Us</button>
+            <h3 class="header-title">All Things Are <br> Possible If You <br> Believe</h3>
+            <p class="header-description">You have to believe in yourself to do what you desire. You can't fullfil your dream in a day or two. You have to work hard to reach your desired goal. Don't let anything discourage you. Always remember, "Hard work pays off".</p>
+            <button class="btn-primary" type="button">Contact Me</button>
         </div>
     </header>
-    <main>
+    <!-- end of header  -->
 
+    <main>
         <!-- about my failure section  -->
         <section class="about-failure">
             <div class="section-image">
@@ -31,20 +29,20 @@
 
             <div class="section-info">
                 <h2 class="section-title">My Failures Of <br> Previous Year</h2>
-                <p class="section-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci
-                    incidunt aspernatur at, consequatur dolorum aut, esse rem, harum repudiandae fugit eum perferendis
-                    expedita distinctio quae? Consequatur, quo? Placeat, eligendi a!</p>
+                <p class="section-description">I decided to become a web developer last year. I tried to gain knowledge from many sources. But I faced different kinds of problems while doing some work. I felt discouraged if I could not solve those problems by myself. But now I tell myself, "Learn from your mistakes".
+                </p>
                 <ul>
-                    <li class="failure-list">Contrary to popular belief, is not simply.</li>
-                    <li class="failure-list">Contrary to popular belief.</li>
-                    <li class="failure-list">Contrary to popular belief, is not .</li>
-                    <li class="failure-list">Contrary to popular is not simply.</li>
-                    <li class="failure-list">Contrary belief, is not simply.</li>
+                    <li class="failure-list">Designing without purpose.</li>
+                    <li class="failure-list">Borrowing too often.</li>
+                    <li class="failure-list">Putting the design first.</li>
+                    <li class="failure-list">No planning manager.</li>
+                    <li class="failure-list">Not doing stuffs right way.</li>
                 </ul>
             </div>
         </section>
+        <!-- end of my failure section  -->
 
-        <!-- about my plan -->
+        <!-- about my plan section -->
         <section class="my-plan">
             <h2>My Plan</h2>
             <div class="plan-container">
@@ -70,40 +68,45 @@
                 </div>
             </div>
         </section>
+        <!-- end of about my plan section  -->
 
-        <!-- about my skills -->
+        <!-- about skills i have learnt section -->
         <section class="skill-section">
             <h3 class="section-title">Skills I Have Learnt</h3>
             <div class="skills-container">
                 <div class="skill">
-                    <img class="skill-icon" src="images/icons/icons8-html-48.png" alt="">
-                    <h3 class="skill-title">HTML </h3>
-                    <p class="skill-description" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam est, voluptates blanditiis rerum cumque maxime. </p>
+                    <img class="skill-icon" src="images/icons/icons8-html-48.png" alt="HTML icon">
+                    <h3 class="skill-title"> HTML </h3>
+                    <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam est, voluptates blanditiis rerum cumque maxime. </p>
                 </div>
                 <div class="skill">
-                    <img class="skill-icon" src="images/icons/icons8-css-48.png" alt="">
+                    <img class="skill-icon" src="images/icons/icons8-css-48.png" alt="CSS icon">
                     <h3 class="skill-title"> CSS </h3>
-                    <p class="skill-description" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam est, voluptates blanditiis rerum cumque maxime. </p>
+                    <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam est, voluptates blanditiis rerum cumque maxime. </p>
                 </div>
             </div>
         </section>
+        <!-- end of skills i have learnt section -->
 
-        <!-- about an advice  -->
+        <!-- about advice section -->
         <section class="advice">
             <div class="advice-section">
-                <div class="advice-section-container">
-                <h2 class="section-title">Always Keep A Positive <br> Mindset</h2>
-                <button class="btn-secondary" type="button">Call Now</button>
-                </div>
+                    <h2 class="section-title">Always Keep A Positive <br> Mindset</h2>
+                    <button class="btn-secondary" type="button">Call Now</button>
             </div>
         </section>
     </main>
+    <!-- end of advice section  -->
+
+    <!-- footer starts from here  -->
     <footer>
         <div class="footer">
             <div class="contact-info">
                 <h3 class="footer-title">Future</h3>
                 <div class="footer-description-container">
-                    <p class="footer-description">Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. Asperiores voluptatum suscipit voluptatibus, <br> alias quo, dicta facilis accusamus ut incidunt, <br> commodi modi possimus molestiae at magnam!</p>
+                    <p class="footer-description">Lorem ipsum dolor sit amet consectetur <br> adipisicing elit.
+                        Asperiores voluptatum suscipit voluptatibus, <br> alias quo, dicta facilis accusamus ut
+                        incidunt, <br> commodi modi possimus molestiae at magnam!</p>
 
                     <p>Email :<a href="mailto:eeryesha@gmail.com"> eeryesha@gmail.com</a></p>
                     <br>
@@ -124,14 +127,15 @@
                 </div>
 
             </div>
-                <div class="subscribing-info">
-                    <h3>Subscribe</h3>
-                    <input class="input-email" type="email" placeholder="Enter your email">
-                    <br>
-                    <button class="btn-tertiary" type="button">Subscribe</button>
-                </div>
+            <div class="subscribing-info">
+                <h3>Subscribe</h3>
+                <input class="input-email" type="email" placeholder="Enter your email">
+                <br>
+                <button class="btn-tertiary" type="button">Subscribe</button>
+            </div>
         </div>
     </footer>
+    <!-- end of footer  -->
 </body>
 
 </html>
